force-app/main/default/objects/NBA_Queue__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account associated with this NBA</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NBA Queue Items</relationshipLabel>
    <relationshipName>NBA_Queue_Items</relationshipName>
    <type>Lookup</type>
</CustomField>