force-app/main/default/objects/NBA_Queue__c/fields/Action_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Action_Instruction__c</fullName>
    <description>Human-readable instruction for the AE (e.g., "Call to schedule demo — high MRR account"). Displayed in the NBA workspace header.</description>
    <label>Action Instruction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>