force-app/main/default/objects/NBA_Queue__c/fields/Action_Tags__c.field-meta.xml
<CustomField>
    <fullName>Action_Tags__c</fullName>
    <label>Action Tags</label>
    <description>JSON structured tag data for action context chips</description>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>