force-app/main/default/objects/NBA_Queue__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Type of recommended action</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
                <default>true</default>
                <label>Follow Up</label>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>First Touch</fullName>
            </value>
            <value>
                <fullName>Re-engage</fullName>
            </value>
            <value>
                <fullName>Stage Progression</fullName>
            </value>
            <value>
                <fullName>SLA Response</fullName>
            </value>
            <value>
                <fullName>Blitz Outreach</fullName>
            </value>
            <value>
                <fullName>Call Completed</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
                <isActive>false</isActive>
                <label>Demo</label>
            </value>
            <value>
                <fullName>Follow_Up</fullName>
                <isActive>false</isActive>
                <label>Follow_Up</label>
            </value>
            <value>
                <fullName>Payroll Opportunity Call</fullName>
                <isActive>false</isActive>
                <label>Payroll Opportunity Call</label>
            </value>
            <value>
                <fullName>Payroll Prospecting Call</fullName>
                <isActive>false</isActive>
                <label>Payroll Prospecting Call</label>
            </value>
            <value>
                <fullName>Proposal</fullName>
                <isActive>false</isActive>
                <label>Proposal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>