force-app/main/default/objects/NBA_Queue__c/fields/Active_Employees__c.field-meta.xml
<CustomField>
    <fullName>Active_Employees__c</fullName>
    <label>Active Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>