force-app/main/default/objects/NBA_Queue__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Generic NBA assignee, independent of business-specific sales rep fields</description>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>NBA Queue Items</relationshipLabel>
    <relationshipName>NBA_Queue_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>