force-app/main/default/objects/NBA_Queue__c/fields/Attempt_Count_Today__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Count_Today__c</fullName>
    <description>Number of attempts on this opportunity today. Used for cooldown enforcement (default cap: 3 per day).</description>
    <label>Attempt Count Today</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>