force-app/main/default/objects/NBA_Queue__c/fields/Automated_Send_Status__c.field-meta.xml
<CustomField>
    <fullName>Automated_Send_Status__c</fullName>
    <label>Automated Send Status</label>
    <description>Status of automated outreach (SMS/Email) for this action</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>