force-app/main/default/objects/NBA_Queue__c/fields/Best_Number_to_Call__c.field-meta.xml
<CustomField>
    <fullName>Best_Number_to_Call__c</fullName>
    <label>Best Number to Call</label>
    <type>Phone</type>
</CustomField>