force-app/main/default/objects/NBA_Queue__c/fields/Best_Time_to_Call__c.field-meta.xml
<CustomField>
    <fullName>Best_Time_to_Call__c</fullName>
    <label>Best Time to Call</label>
    <type>DateTime</type>
</CustomField>