force-app/main/default/objects/NBA_Queue__c/fields/Break_Preferences_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Break_Preferences_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Break Preferences Engaged</label>
    <type>Checkbox</type>
</CustomField>