force-app/main/default/objects/NBA_Queue__c/fields/Cadence_Name__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Name__c</fullName>
    <description>DeveloperName of the NBA_Cadence__mdt record this action belongs to. Used for progress tracking across sessions.</description>
    <label>Cadence Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>