force-app/main/default/objects/NBA_Queue__c/fields/Cadence_Stage__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Stage__c</fullName>
    <description>Current position in the outreach cadence (1, 2, 3...). Used by the cadence engine to determine next spacing and method.</description>
    <label>Cadence Stage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>