force-app/main/default/objects/NBA_Queue__c/fields/Cadence_Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Step_Number__c</fullName>
    <description>Step number that was completed in the cadence. Maps to NBA_Cadence_Step__mdt.Step_Number__c.</description>
    <label>Cadence Step Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>