force-app/main/default/objects/NBA_Queue__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <description>AI Configuration that generated this NBA recommendation (e.g., Default, Sale Blitz)</description>
    <label>Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>