force-app/main/default/objects/NBA_Queue__c/fields/CooldownUntil__c.field-meta.xml
<CustomField>
    <fullName>CooldownUntil__c</fullName>
    <description>Prevents re-evaluation until this datetime</description>
    <label>Cooldown Until</label>
    <type>DateTime</type>
</CustomField>