force-app/main/default/objects/NBA_Queue__c/fields/Created_Flow__c.field-meta.xml
<CustomField>
    <fullName>Created_Flow__c</fullName>
    <description>Shows the flow this NBA Queue record was created by</description>
    <label>Created Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>