force-app/main/default/objects/NBA_Queue__c/fields/Current_Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Payroll_Provider__c</fullName>
    <label>Current Payroll Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADP</fullName>
            </value>
            <value>
                <fullName>Gusto</fullName>
            </value>
            <value>
                <fullName>Quickbooks Online</fullName>
            </value>
            <value>
                <fullName>Paychex</fullName>
            </value>
            <value>
                <fullName>Onpay</fullName>
            </value>
            <value>
                <fullName>No Previous Provider (inception)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>