force-app/main/default/objects/NBA_Queue__c/fields/Data_Fix_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Data_Fix_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used in flow triggers for data fixes</description>
    <label>Data Fix Boolean</label>
    <type>Checkbox</type>
</CustomField>