force-app/main/default/objects/NBA_Queue__c/fields/Department_Management_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Department_Management_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Department Management Engaged</label>
    <type>Checkbox</type>
</CustomField>