force-app/main/default/objects/NBA_Queue__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>AI-generated explanation for this recommendation</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>