force-app/main/default/objects/NBA_Queue__c/fields/Dismissed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dismissed_Reason__c</fullName>
    <label>Dismissed Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>