force-app/main/default/objects/NBA_Queue__c/fields/DueAt__c.field-meta.xml
<CustomField>
    <fullName>DueAt__c</fullName>
    <description>Precise datetime when action is due (includes time, unlike Due_Date__c)</description>
    <label>Due At</label>
    <type>DateTime</type>
</CustomField>