force-app/main/default/objects/NBA_Queue__c/fields/EligibilityFingerprint__c.field-meta.xml
<CustomField>
    <fullName>EligibilityFingerprint__c</fullName>
    <description>Hash of eligibility criteria for change detection</description>
    <label>Eligibility Fingerprint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>