force-app/main/default/objects/NBA_Queue__c/fields/Email_Message__c.field-meta.xml
<CustomField>
    <fullName>Email_Message__c</fullName>
    <description>Email message ID or reference for tracking email actions</description>
    <label>Email Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>