force-app/main/default/objects/NBA_Queue__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>OB_Archiver__ArchiveLog__c</referenceTo>
    <relationshipLabel>NBA Queue</relationshipLabel>
    <relationshipName>NBA_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>