force-app/main/default/objects/NBA_Queue__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <description>Salesforce Event ID for urgent event-based recommendations</description>
    <label>Event ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>