force-app/main/default/objects/NBA_Queue__c/fields/Event_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_DateTime__c</fullName>
    <description>Stores the Event start time to detect when events are rescheduled</description>
    <label>Event Start DateTime</label>
    <type>DateTime</type>
</CustomField>