force-app/main/default/objects/NBA_Queue__c/fields/Expected_Incremental_ARR__c.field-meta.xml
<CustomField>
    <fullName>Expected_Incremental_ARR__c</fullName>
    <label>Expected Incremental ARR</label>
    <description>Computed economic value score: LTW x IIW x Connect Rate</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>