force-app/main/default/objects/NBA_Queue__c/fields/Feature_Usage__c.field-meta.xml
<CustomField>
    <fullName>Feature_Usage__c</fullName>
    <label>Feature Usage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Timetracking</fullName>
            </value>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>