force-app/main/default/objects/NBA_Queue__c/fields/FocusUntil__c.field-meta.xml
<CustomField>
    <fullName>FocusUntil__c</fullName>
    <description>Optional: keeps this action in focus mode until datetime</description>
    <label>Focus Until</label>
    <type>DateTime</type>
</CustomField>