force-app/main/default/objects/NBA_Queue__c/fields/Geofencing_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Geofencing_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geofencing Engaged</label>
    <type>Checkbox</type>
</CustomField>