force-app/main/default/objects/NBA_Queue__c/fields/Hrdocs_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Hrdocs_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HR Docs Engaged</label>
    <type>Checkbox</type>
</CustomField>