force-app/main/default/objects/NBA_Queue__c/fields/Impact_Score__c.field-meta.xml
<CustomField>
    <fullName>Impact_Score__c</fullName>
    <description>Computed impact score: (MRR_Weight × MRR_Score) + (Close_Weight × Close_Probability_Score). Separated from Priority_Score for transparency.</description>
    <label>Impact Score</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>