force-app/main/default/objects/NBA_Queue__c/fields/Implementation_Project__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Project</label>
    <referenceTo>inov8__PMT_Project__c</referenceTo>
    <relationshipLabel>NBA Queue</relationshipLabel>
    <relationshipName>NBA_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>