force-app/main/default/objects/NBA_Queue__c/fields/Is_Time_Bound__c.field-meta.xml
<CustomField>
    <fullName>Is_Time_Bound__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this is a Layer 1 time-bound action (upcoming meeting, SLA first-touch, scheduled follow-up). Time-bound actions always take priority.</description>
    <label>Is Time Bound</label>
    <type>Checkbox</type>
</CustomField>