force-app/main/default/objects/NBA_Queue__c/fields/Last_Attempt_Method__c.field-meta.xml
<CustomField>
    <fullName>Last_Attempt_Method__c</fullName>
    <description>Last outreach method used. Drives method escalation logic (Call → SMS → Email).</description>
    <label>Last Attempt Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>