force-app/main/default/objects/NBA_Queue__c/fields/Last_Reconcile_Enqueue__c.field-meta.xml
<CustomField>
    <fullName>Last_Reconcile_Enqueue__c</fullName>
    <label>Last Reconcile Enqueue</label>
    <type>DateTime</type>
</CustomField>