force-app/main/default/objects/NBA_Queue__c/fields/LastEvaluatedAt__c.field-meta.xml
<CustomField>
    <fullName>LastEvaluatedAt__c</fullName>
    <description>Timestamp of last NBA evaluation run</description>
    <label>Last Evaluated At</label>
    <type>DateTime</type>
</CustomField>