force-app/main/default/objects/NBA_Queue__c/fields/Meeting_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Disposition__c</fullName>
    <label>Meeting Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>Missed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>