force-app/main/default/objects/NBA_Queue__c/fields/Model_Version__c.field-meta.xml
<CustomField>
    <fullName>Model_Version__c</fullName>
    <label>Model Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>