force-app/main/default/objects/NBA_Queue__c/fields/Not_Surfaced_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Not_Surfaced_Reasons__c</fullName>
    <label>Not Surfaced Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>