force-app/main/default/objects/NBA_Queue__c/fields/Number_Dialed__c.field-meta.xml
<CustomField>
    <fullName>Number_Dialed__c</fullName>
    <label>Number Dialed</label>
    <length>25</length>
    <type>Text</type>
</CustomField>