force-app/main/default/objects/NBA_Queue__c/fields/Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opp Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NBA_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>