force-app/main/default/objects/NBA_Queue__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The opportunity this NBA recommendation relates to</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>NBA Queue Items</relationshipLabel>
    <relationshipName>NBA_Queue_Items</relationshipName>
    <type>Lookup</type>
</CustomField>