force-app/main/default/objects/NBA_Queue__c/fields/Owner_Match__c.field-meta.xml
<CustomField>
    <fullName>Owner_Match__c</fullName>
    <formula>AND( Sales_Rep__c =  Opportunity__r.OwnerId,  Opportunity__c != null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Match</label>
    <type>Checkbox</type>
</CustomField>