force-app/main/default/objects/NBA_Queue__c/fields/Payroll_Buyer_Stage__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Buyer_Stage__c</fullName>
    <label>Payroll Buyer Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-SS Flow</fullName>
            </value>
            <value>
                <fullName>SS Pre-Dashboard</fullName>
            </value>
            <value>
                <fullName>Reached Dashboard</fullName>
            </value>
            <value>
                <fullName>Ready for Implementation</fullName>
            </value>
            <value>
                <fullName>Ready to Run</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>