force-app/main/default/objects/NBA_Queue__c/fields/Person_Called__c.field-meta.xml
<CustomField>
    <fullName>Person_Called__c</fullName>
    <label>Person Called</label>
    <length>100</length>
    <type>Text</type>
</CustomField>