force-app/main/default/objects/NBA_Queue__c/fields/Priority_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Priority_Bucket__c</fullName>
    <description>Selection Engine bucket assignment from Gate-Bucket-Rank pipeline.</description>
    <label>Priority Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cadence Due Today</fullName>
            </value>
            <value>
                <fullName>Late-Stage Stalled</fullName>
            </value>
            <value>
                <fullName>High Impact Focus</fullName>
            </value>
            <value>
                <fullName>Neglected</fullName>
            </value>
            <value>
                <fullName>General Pipeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>