force-app/main/default/objects/NBA_Queue__c/fields/Priority_Layer__c.field-meta.xml
<CustomField>
    <fullName>Priority_Layer__c</fullName>
    <description>Layer assignment in the 3-layer priority model. Layer 1 always served first.</description>
    <label>Priority Layer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Layer 1 - Time Bound</fullName>
            </value>
            <value>
                <fullName>Layer 2 - Mode</fullName>
            </value>
            <value>
                <fullName>Layer 3 - Impact+Urgency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>