force-app/main/default/objects/NBA_Queue__c/fields/Priority_Multiplier_Applied__c.field-meta.xml
<CustomField>
    <fullName>Priority_Multiplier_Applied__c</fullName>
    <description>Indicates which priority multipliers were applied when this item was accepted</description>
    <label>Priority Multiplier Applied</label>
    <length>255</length>
    <type>Text</type>
</CustomField>