force-app/main/default/objects/NBA_Queue__c/fields/Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>Priority_Score__c</fullName>
    <description>AI-calculated priority score (0-1015 with urgent events)</description>
    <label>Priority Score</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>