force-app/main/default/objects/NBA_Queue__c/fields/PriorityBand__c.field-meta.xml
<CustomField>
    <fullName>PriorityBand__c</fullName>
    <description>Priority band for work prioritization</description>
    <label>Priority Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>