force-app/main/default/objects/NBA_Queue__c/fields/ReasonJson__c.field-meta.xml
<CustomField>
    <fullName>ReasonJson__c</fullName>
    <description>Structured JSON with detailed reasoning data</description>
    <label>Reason JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>