force-app/main/default/objects/NBA_Queue__c/fields/ReasonText__c.field-meta.xml
<CustomField>
    <fullName>ReasonText__c</fullName>
    <description>Human-readable explanation of why this NBA was created</description>
    <label>Reason Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>