force-app/main/default/objects/NBA_Queue__c/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <description>Links to the Custom Metadata rule that created this action (e.g., Day1_Pressure, Late_Stage_Inactivity). Used for traceability and debugging.</description>
    <label>Rule Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>